--- a/RNA_P21.ipynb
+++ b/RNA_P21.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyOnh0paoKJKSW+BrSZM0HvS",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,13 +16,13 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/PedroYutaroUEA/RNA_PP2.1/blob/main/RNA_P21.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
+        "# Redes Neurais Artificiais - Projeto Prático 2.1\n",
+        "## Aprendizado Supervisionado do Neurônio Perceptron"
+      ],
+      "metadata": {
+        "id": "tbVoN9FgwKs4"
+      }
     },
     {
       "cell_type": "markdown",
