Alterações Discussão de Resultados na Parte 2

--- a/RNA_P21.ipynb
+++ b/RNA_P21.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 206,
+      "execution_count": null,
       "metadata": {
         "id": "zd71zX6yGiHT"
       },
@@ -82,7 +82,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 207,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -116,7 +116,7 @@
       "metadata": {
         "id": "L01-J8vRlBiE"
       },
-      "execution_count": 208,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
       "metadata": {
         "id": "2klT7nM4Kzpq"
       },
-      "execution_count": 209,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
         },
         "outputId": "e1f06721-e9c8-4c47-97de-138b30d60c27"
       },
-      "execution_count": 210,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,7 +258,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 211,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -298,7 +298,7 @@
         "id": "-ofIUKw0WjNV",
         "outputId": "6edade4a-6b59-4c02-f67f-8369276b4409"
       },
-      "execution_count": 212,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -336,7 +336,7 @@
         "id": "6S56dI1xgYeO",
         "outputId": "2d8b955d-80a0-4d3f-f422-797c68106fd8"
       },
-      "execution_count": 213,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +402,7 @@
         "id": "DLGbc93bieov",
         "outputId": "321f58bc-2539-40aa-dc0a-2678f4162008"
       },
-      "execution_count": 214,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +457,7 @@
         "id": "X14UOp0Q20eq",
         "outputId": "c37338fb-824e-4da1-a457-c076ed161b56"
       },
-      "execution_count": 215,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -489,7 +489,7 @@
         "id": "I7lPZ-QAAlrz",
         "outputId": "609b38a0-c66d-4561-e74e-1fa4934c1a91"
       },
-      "execution_count": 216,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,7 +525,7 @@
       "metadata": {
         "id": "fOGmPLGf3qBS"
       },
-      "execution_count": 217,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -574,7 +574,7 @@
         "id": "Kr096LLEnKrZ",
         "outputId": "7cb8cf59-b794-49af-d276-f75bb7d7ccd2"
       },
-      "execution_count": 218,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5626,7 +5626,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 219,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5652,9 +5652,9 @@
         "**Discussão de Resultados**\n",
         "\n",
         "Para as Taxas de Aprendizado utilizadas:\n",
-        "- η = 0.4 apresentou um bom equilíbro em tanto sua média quanto desvio padrão para ambos os intervalos de pesos, além de ter tanto a segunda menor e quanto a segunda maior quantidade de épocas do experimento;\n",
-        "- η = 0.1 foi a taxa que teve a menor quantidade de épocas para ambos os intervalos de peso, no entanto, teve uma diferença significativa entre a média de ajustes e seu desvio padrão para os dois intervalos;\n",
-        "- η = 0.01 demonstrou os resultados mais discrepantes, tendo simultâneamente a maior e menor quantidade de épocas em seu treinamento, porém, teve a maior média de ajustes e desvio padrão para ambos os intervalos.\n",
+        "- η = 0.4 apresentou os melhores resultados para as taxas utilizadas, tendo as melhores combinações de Média de ajustes e Desvio Padrão junto de um número baixo de épocas;\n",
+        "- η = 0.1 teve resultados similares à η = 0.4, tendo até o mesmo número de épocas, no entanto, no Intervalo (-100, 100) foram necessários muito mais ajustes para se obter convergência;\n",
+        "- η = 0.01 demonstrou os resultados mais discrepantes, tendo um menor número de épocas fora dos padrões observados em outras taxas, além de ter a maior média de ajustes e desvio padrão para ambos os intervalos.\n",
         "\n",
         "Conclui-se que uma Taxa de Aprendizado muito baixa torna o treinamento mais lento devido a grande quantidade de ajustes necessários para se atingir o resultado desejado, enquanto uma taxa maior acelera o processo de convergência e, consequentemente, de treinamento.\n",
         "\n",
@@ -5662,9 +5662,9 @@
         "- Intervalos maiores possibilitam a geração de pesos maiores, que podem dificultar o treinamento do modelo, especialmente para Taxas de Aprendizado menores;\n",
         "- Intervalos menores apresentaram médias e desvios padrões menores, indicando que pesos iniciais mais próximos de zero ajudam a convergir.\n",
         "\n",
-        "Portanto, Intervalos menores melhora a performance e estabilidade do treinamento, enquanto Intervalos maiores aumentam a variabilidade e podem comprometer o processamento.\n",
+        "Portanto, Intervalos menores melhoram a performance e estabilidade do treinamento, enquanto Intervalos maiores aumentam a variabilidade e podem comprometer o processamento.\n",
         "\n",
-        "A melhor configuração apresentada nesse experimento foi Taxa de Aprendizado = 0.1 e Intervalo de Pesos (-0.5, 0.5), onde foi apresentada uma excelente combinação de Média e Desvio Padrão baixos com um pequeno Número de Épocas necessárias para convergir.\n",
+        "Neste experimento, duas configurações se apresentaram como melhores, sendo elas: Taxa de Aprendizado = 0.4 e Intervalo de Pesos (-0.5, 0.5), e Taxa de Aprendizado = 0.1 e Intervalo de Pesos (-0.5, 0.5). Ambas demonstraram uma excelente combinação de Média e Desvio Padrão baixos com um pequeno Número de Épocas necessárias para convergir. Vale ressaltar também que, apesar de ambos os modelos serem similares em performance, a primeira configuração se provou ser levemente mais estável, enquanto a segunda pode ser teoricamente mais rápida, mas está sujeita a uma maior variabilidade.\n",
         "\n",
         "A pior configuração apresentada nesse experimento foi Taxa de Aprendizado = 0.01 e Intervalo de Pesos (-100, 100), onde foram apresentados valores insatisfatórios, contendo os maiores valores em todo o treinamento para as métricas de Média de Ajustes, Desvio Padrão de Ajustes e Número de Épocas."
       ],
@@ -5704,7 +5704,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5736,7 +5736,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 221,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5784,7 +5784,7 @@
           "height": 452
         }
       },
-      "execution_count": 252,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5816,7 +5816,7 @@
       "metadata": {
         "id": "bKGKcqNNoF3r"
       },
-      "execution_count": 223,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5846,7 +5846,7 @@
         },
         "outputId": "a5bd2fa9-ba49-42a3-eea0-e05a37b6a5ac"
       },
-      "execution_count": 275,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5876,7 +5876,7 @@
       "metadata": {
         "id": "QsGrSXpfn5gp"
       },
-      "execution_count": 276,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5901,7 +5901,7 @@
         "id": "XRS5E-0mq4pk",
         "outputId": "f84cc420-d70b-4f75-da14-374de7866d45"
       },
-      "execution_count": 277,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10929,7 +10929,7 @@
       "metadata": {
         "id": "rQVsI9_X8Ry_"
       },
-      "execution_count": 278,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10957,7 +10957,7 @@
         "id": "zhyBcdhcy3Mw",
         "outputId": "6a46d6f3-ccde-411b-b5f3-12febea5e986"
       },
-      "execution_count": 279,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -10992,7 +10992,7 @@
         "id": "VT7HJbffzjmJ",
         "outputId": "743bef21-2e12-4106-dd9f-94545d4571cb"
       },
-      "execution_count": 280,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11026,7 +11026,7 @@
         "id": "M3PCpAd10GcL",
         "outputId": "497ce445-a327-4e54-a4d2-e3e3b61dcc74"
       },
-      "execution_count": 281,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -11133,7 +11133,7 @@
         "id": "H5zXcz5R1Twj",
         "outputId": "64ebe978-9ed7-4207-fbab-6e350b4ed42f"
       },
-      "execution_count": 282,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
